# workshops

./: .gitattributes  .gitignore
Java/SolarSystem/nbproject/: build-impl.xml  genfiles.properties  project.properties
Java/SolarSystem/src/: Body.java  First.java  Fraction.java  SolarSystem.java  TestGravity.java  Vec3d.java
Java/SolarSystem/test/: TestFraction.java
c++/: .gitignore  Complex.cc  Screen  Screen.cc  Vec3d  Vec3d.cc  a.out  challengeproblems.txt  debuggingpractice.cc  editors.txt  editors.txt~  factorial  factorial.cc  first  fraction  fraction.cc  functions  functions.cc  looppractice1  looppractice1.cc  looppractice1.s  loops  loops.cc  loops2  loops2.cc  operators.cc  readinginput  readinginput.cc  statements  statements.cc  sums  sums.cc  variables  variables.cc
crypto/: .gitignore  Makefile  Makefile~  README.txt  a.out  aes_decryption.cc  bio_connect.cc  certificate.pem  client2.cc  client2.cc~  crypt.txt  decryptssl.cc  explainingpositionindependentcode.cc  explainingpositionindependentcode.s  fastrandtest  fastrandtest.cc  fastrandtest.s  fastudpsecure  fastudpsecure.cc  generate_keypair.cc  instructions.txt  key.pem  makingalibrary.c  makingalibrary.h  md5.cc  mycode.cc  mycode2  plaintext.txt  server-cert.pem  server-private.pem  serverpriv.pem  serverpub.pem  sslcert.cpp  sslclient.cc  udpclient.cc  udpserver.cc  unixcommands.txt  xor.cc
crypto/arthurodwyer/: Makefile  Makefile~  bare_https_client.cc  bare_https_server  bare_https_server.cc  dovhttpclient.cc  http_client.cc  http_server.cc  proxy_client.cc  proxy_server.cc  server-cert.pem  server-private.pem  serverinfo.hh  unique_ptr_demo.cc
crypto/success/: CMakeLists.txt  Makefile
octave/: MSFT.csv  raw_data.csv  test.m
octave/basics/: mydata.txt  noisysine.m
octave/census/: .gitignore  getbigfile.txt
octave/globalwarming/: 8454000.txt  8454000.txt~  historical_ProvidenceRI.txt
octave/misc/: search_engine-ww-monthly-201901-201912.csv  usstudentages.csv  vccin_sfty_dag.csv
octave/population/: worldpop.txt
octave/solarsystem/: exoexample.dat~  exoplanet.csv  exoplanet.txt  exoplanetdemo.m  occult.m  solarsystem.m  solarsystem.m~
octave/timeseries/: IBM.csv  plotibmtimeseries.m
opengl/: 3D Graphics with OpenGL - The Basic Theory.html  README.md  drawprimitiverestart.cc  opengl.md  showtesselation.m  tesselationexample.cc
opengl/src/00immediatemode/: 00a_quad  00a_quad.cc  00a_triangle  00b_triangle  00b_triangle.cc  00c_badquad  00c_badquad.cc  00d_drawprimitives  00d_drawprimitives.cc  00triangle  00triangle.cc~  01a_tetra_animation  01a_tetra_animation.cc  01b_tetra_orbit  01b_tetra_orbit.cc  01tetrahedron  01tetrahedron.cc  01tetrahedron.cc~  02torus  02torus.cc  02torus.cc~  03colorcube_flyby  03colorcube_flyby.cc  04sierpinski  04sierpinski.cc  04sierpinsky.cc~  05comet  05comet.cc  05comet.cc~  06litsolids.cc  06litsolids.cc~  07moonphases  07moonphases.cc  07moonphases.cc~  08bouncingball  08bouncingball.cc  Makefile  Makefile~  glheaders.hh  glheaders.hh~
opengl/src/01shaders/: .gitignore  01window.cc  02triangle.cc  03gouraud.cc  03gouraud.frag  03gouraud.vert  04b_input2.cc  04c_projection.cc  04c_transform.vert  04transform.cc  04transform.vert  05sphere1.cc  06b_sphere3.cc  06b_texturepoints.vert  06c_litsphere.cpp  06sphere2.cc  07_heatmap.frag  07_heatmap.vert  07visualizefunc.cc  CMakeCache.txt  CMakeLists.txt  Makefile  Shape.hh  Sphere.cc  Sphere.hh  cmake_install.cmake  glmexample.cc  input.cpp  lighting_technique.cpp  lighting_technique.h  nonworking_texturesphere.cc  shape.hh  technique.cpp  technique.h  test1.cc  testCustomShader.cc  testLoadWebp.cc  testTransformations.cc  testloadwebp.cc
opengl/src/01shaders/common/: bezier.hh  common.cc  common.hh  log.hh  shape.cpp  testbezier.cpp
opengl/src/01shaders/inlineshaders/: common.frag  common.vert
opengl/src/01shaders/opengl/: GLWin.cc  GLWinFonts.cc  Image.cc  Image.hh  MultiShape.cc  MultiShape.hh  MultiShape2D.cc  MultiShape2D.hh  Shader.cc  Shader.hh  Shape.cc  Shape.hh  Sphere.cc  StyledMultiShape2D.cc
opengl/src/01shaders/shaders/: 01simplegradient.frag  MultiTexture.frag  MultiTexture.vert  Texture.frag  Texture.vert  weather.frag
opengl/src/01shadersbuild/CMakeTmp/: CheckSymbolExists.c  src.cxx
opengl/src/02minigrailframework/: test1.cc  testAddRemoveDrawElements.cc  testLoadWebp.cc  testSphere.cc
opengl/src/02minigrailframework/conf/: fonts.conf
opengl/src/02minigrailframework/inlineshaders/: common.frag  common.vert
opengl/src/02minigrailframework/opengl/: Canvas.cc  Canvas.hh  GrailGUI.hh  ModifiableMultiShape.hh  MultiShape.hh  Shader.cc  Sphere.hh  StyledMultiShape2D.cc  StyledMultiShape2D.hh  Tab.cc
opengl/src/02minigrailframework/textureexample/: textureexample.cc
opengl/src/examples/krugerdemos/: 02simple.frag  03gouraud.frag  03gouraud.vert  04transform.cc  05_3d.vert  (+9 more)
openscad/: advanced.scad  demos.scad  extrusion.scad  modules_variables_loops.scad  summary.scad  summary.stl
parallel/: Makefile  avx_summation  avx_summation.cpp  intro_cuda.md  introduction.md  multithreadingadd_doesnt_speedup.cpp  openmp1  openmp2  openmp2.cpp  primes.cpp  scalar_summation  scalar_summation.cpp  thread1.cpp
parallel/CUDA/: Makefile  add.cu  displaycapabilities.cu  mergesort_cpu.cpp  rustc.hh
performance/: .gitignore  FastLinkedList.cc  FastLinkedList2.cc  FastLinkedList3.cc  FlashLoadingLinkedList1.cc  UsingSTLLinkedList.cc  WritingSTLList.cc  WritingSTLListASCII.cc  bitcounts.cc
performance/GravSim/: Body.cc  GravSim.cc  GravSim.hh  Makefile  Vec3d.cc  Vec3d.hh  gravsim  main.cc
processing/s01_animate_rect/: s01_animate_rect.pde
processing/s02_bouncingball/: s02_bouncingball.pde
processing/s03_mapviewer/: s03_mapviewer.pde
processing/s04_transforms/: s04_transforms.pde
processing/s05_3dtransforms/: s05_3dtransforms.pde
processing/s06_3dtransforms/: s06_3dtransforms.pde
processing/s07_earth/: s07_earth.pde
processing/s08_gouraud/: s08_gouraud.pde
processing/s09_2dsolarsystem/: s09_2dsolarsystem.pde
processing/s10_3dsolarsystem/: s10_3dsolarsystem.pde
(+16 files in other folders)
